Project GoBank {
  database_type: 'PostgreSQL'
  Note: '''
    # Bankgo Database
  '''
}

Table users as U {
  username varchar [ pk ]
  hashed_password varchar [ not null ]
  full_name varchar [ not null ]
  email varchar [ not null, unique ]
  is_email_verified boolean [ not null, default: false ]
  password_changed_at timestamptz [ not null, default: `0001-01-01 00:00:00Z` ]
  created_at timestamptz [ not null, default: `now()` ]
}

Table verify_emails {
  id bigserial [ pk ]
  username varchar [ not null, ref: > U.username ]
  email varchar [ not null ]
  secret_code varchar [ not null ]
  is_used boolean [ not null, default: false ]
  created_at timestamptz [ not null, default: `now()` ]
  expires_at timestamptz [ not null, default: `now() + interval '15 minutes'` ]
}

Table accounts as acc {
  id bigserial [ pk ]
  owner varchar [ ref: > U.username, not null ]
  balance decimal [ not null ]
  currency varchar [ not null ]
  created_at timestamptz [ not null, default: `now()` ]

  Indexes {
    owner
    (owner, currency) [unique]
  }
}

Table entries {
  id bigserial [ primary key ]
  amount decimal [ not null, note: 'can be +ve, or -ve' ]
  account_id bigint [ ref: > acc.id, not null ]
   created_at timestamptz [ not null, default: `now()` ]

    Indexes {
    account_id
  }
}

Table transfers {
  id bigserial [ primary key ]
  from_account_id bigint [ ref: > acc.id, not null ]
  to_account_id bigint [ ref: > acc.id, not null ]
  amount decimal [ not null, note: 'Must be +ve' ]
   created_at timestamptz [ not null, default: `now()` ]

    Indexes {
      from_account_id
      to_account_id
      (from_account_id, to_account_id)
    
  }
}

Table sessions {
  id uuid [ primary key ]
  username varchar [ not null, ref: > U.username ]
  refresh_token varchar [ not null ]
  user_agent varchar [ not null ]
  client_ip varchar [ not null ]
  is_blocked boolean [ not null, default: false ]
  expires_at timestamptz [ not null ]
  created_at timestamptz [ not null, default: `now()` ]

	Indexes {
    	id
  	}
}
